# brave-core

./: BUILD.gn  DEPS  Jenkinsfile  package-lock.json  package.json
app/: brave_generated_resources.grd
app/win/: BUILD.gn
browser/: about_flags.cc  brave_content_browser_client.cc  brave_content_browser_client.h  brave_drm_tab_helper.cc  brave_profile_prefs.cc  brave_tab_helpers.cc  browser_context_keyed_service_factories.cc
browser/brave_ads/: ads_tab_helper.cc
browser/brave_rewards/: rewards_tab_helper.cc
browser/brave_shields/: brave_shields_web_contents_observer.cc
browser/brave_stats/: brave_stats_tab_helper.cc
browser/brave_vpn/: brave_vpn_service_factory.cc  sources.gni
browser/brave_wallet/: BUILD.gn  asset_discovery_manager_unittest.cc  asset_discovery_task_unittest.cc  brave_wallet_ethereum_chain_browsertest.cc  brave_wallet_provider_impl_unittest.cc  (+4 more)
buildtools/redirect-cc/: BUILD.gn  redirect-cc.cc
common/: rewards_sync_scoped_persistent_pref_store.cc  rewards_sync_scoped_persistent_pref_store.h  rewards_sync_scoped_persistent_pref_store_unittest.cc
components/bls/rs/cxx/: BUILD.gn  Cargo.toml
components/bls/rs/cxx/src/: main.rs  shim.h
components/bls/rs/cxx/src/bls/: api.rs  types.rs
components/brave_today/rust/: Cargo.toml  lib.rs
ios/: BUILD.gn
patches/: build-config-BUILDCONFIG.gn.patch  chrome-BUILD.gn.patch  chrome-VERSION.patch  chrome-android-BUILD.gn.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-extensions-BUILD.gn.patch  chrome-browser-ui-webui-chrome_web_ui_controller_factory.cc.patch  components-content_settings-renderer-BUILD.gn.patch  components-omnibox-browser-BUILD.gn.patch  components-safe_browsing-core-common-safe_browsing_prefs.cc.patch  components-signin-internal-identity_manager-BUILD.gn.patch  components-sync-engine-BUILD.gn.patch  components-translate-core-common-BUILD.gn.patch  content-browser-renderer_host-navigation_controller_impl.cc.patch  courgette-third_party-bsdiff-paged_array.h.patch  third_party-crashpad-crashpad-util-mach-mig_fix.py.patch
renderer/: brave_content_renderer_client.cc  sources.gni
resources/: resource_ids.spec
script/: audit_deps.py  deps.py  download_brave_goma.py
test/: BUILD.gn
(+230 files in other folders)
