[package]
name = "brave-news-cxx"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = { path = "../../../../third_party/rust/cxx/v1/crate"}
env_logger = "0.9.0"
feed-rs = { git = "https://github.com/feed-rs/feed-rs", branch = "master" }
log = "0.4.14"
lazy_static = "1.4.0"
regex = "1.5.4"
voca_rs = "1.14.0"

[build-dependencies]
cxx-build = "1.0"

[lib]
name = "brave_news_cxx"
path = "lib.rs"
crate-type = ["rlib"]
