# Copyright 2022 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//brave/build/rust/rust_cxx.gni")

rust_crate("rust_lib") {
  visibility = [ "//brave/components/bls/rs:rust_lib" ]

  inputs = [
    "Cargo.toml",
    "main.rs",
    "src/bls/api.rs",
    "src/bls/types.rs"
  ]
}

rust_cxx("cxx") {
  input = [ "src/main.rs" ]
  native_header_deps = [ ":shim" ]
}

source_set("shim") {
  visibility = [
    ":*",
    "//brave/components/bls",
  ]
  sources = [ "src/shim.h" ]

  deps = [
    "//base",
    "//brave/build/rust:cxx_cppdeps",
  ]
}
