[package]
name = "bls-cxx"
description = "FFI Interface to BLS"
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]
cxx = "1.0"
bls-signatures = { version = "0.11.0", default-features = false, features = ["blst"] }
blstrs = "0.4"
rand = "0.8"
rand_chacha = "0.3.1"
rayon = "1.2.1"
group = "0.11"
libc = "0.2.58"

[build-dependencies]
cxx-build = "1.0"

[lib]
name = "bls_cxx"
crate-type = ["rlib"]
